# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  architecture_flow.ascii  architecture_flow.txt  format.sh  frontend-changes.md  lint.sh  pyproject.toml  quality-check.sh  typecheck.sh
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  mock_ai_generator.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
